<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/loginLayout"
              android:padding="@dimen/activity_vertical_margin">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_welcome_text"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_host"
            android:id="@+id/hostLabel"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/host"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textUri"
            android:text="@string/default_host" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_username"
            android:id="@+id/usernameLabel"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="text"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_password"
            android:id="@+id/passwordLabel"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textPassword"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/loginButton" android:layout_gravity="center_horizontal"/>
</LinearLayout>