<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/list_item_content"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="blocksDescendants"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_num"
            android:id="@+id/orderIdLabel"
            android:width="100dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_num"
            android:id="@+id/orderId"
            android:layout_toRightOf="@id/orderIdLabel"
            android:layout_toEndOf="@id/orderIdLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/statusLabel"
            android:width="100dp"
            android:layout_below="@id/orderIdLabel"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/status"
            android:layout_toRightOf="@id/statusLabel"
            android:layout_toEndOf="@id/statusLabel"
            android:layout_below="@id/orderId"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:id="@+id/createdLabel"
            android:width="100dp"
            android:layout_below="@id/statusLabel"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:id="@+id/createdAt"
            android:layout_toRightOf="@id/createdLabel"
            android:layout_toEndOf="@id/createdLabel"
            android:layout_below="@id/status"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/createdLabel"
            android:background="#000"
            android:alpha="1"

            />

</RelativeLayout>